--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-MONGO_URL = mongodb+srv://rampaldivyansh:pzus8f4pLLHaahtA@blogbuddy.cheidus.mongodb.net/expenseApp
+MONGO_URL = mongodb+srv://rampaldivyansh:BRtOCh9sVMQiGejW@blogbuddy.cheidus.mongodb.net/expenseApp
